email popup screen error and success flows handled. Slider alignment fixed.

--- a/app/javascript/snap/styles/components/_base.scss
+++ b/app/javascript/snap/styles/components/_base.scss
@@ -91,8 +91,9 @@ p {
     opacity: 0.2 !important;
 }
 
-input[type=email].error {
-    border-bottom: 2px solid red !important;
+.btn-outline-secondary:focus, 
+.btn-outline-secondary.focus {
+    box-shadow: none !important;
 }
 
 .footer {
